@@ -64,6 +64,8 @@ Major changes since man-db 2.5.0:
 	o All programs, except the obsolete 'wrapper', now accept a --debug
 	  option. (accessdb, lexgrog, and zsoelim were lacking it.)
 
+	o man now accepts a --warnings option to enable groff warnings.
+
 man-db 2.5.0 (7 October 2007)
 =============================
 
